View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027029 | Open CASCADE | OCCT:Data Exchange | public | 2015-12-22 16:52 | 2016-04-20 15:50 |
Reporter | ifv | Assigned To | abv | ||
Priority | urgent | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027029: Possible regression in test de iges_1 L6 because of fix for issue 26837 | ||||
Description | For fix CR26837 there is regression in de iges_1 L6: Error : 1 differences with reference data found : Reference data - TOLERANCE : MaxTol = 0.04931043567 ( 0.04931014771 ) AvgTol = 0.000378470309 ( 0.0003854574649 ) Current data - TOLERANCE : MaxTol = 0.7835807702 ( 0.7835812423 ) AvgTol = 0.0006273489615 ( 0.0006349868179 ) MaxTol is increased dramatically, but it can be correct result. It is necessary to define is it real regression or not. | ||||
Steps To Reproduce | testgrid de iges_1 L6 | ||||
Tags | No tags attached. | ||||
Test case number | de iges_1 L6 | ||||
|
Branch CR27029 has been created by nbv. SHA-1: 948ef94d26213b8bb8c28a2204fe8b5d07bd2446 Detailed log of new commits: Author: nbv Date: Wed Dec 23 17:43:19 2015 +0300 0027029: Possible regression in test de iges_1 L6 because of fix for issue 26837 We must have failed to limit to curve range if the curve is periodic or closed. Test cases returned to the state before fix for issue 0026837. Author: nbv Date: Wed Dec 23 10:01:51 2015 +0300 0026837: SameParameter algorithm throws an exception Test case for issue CR26837 Correction of test cases for issue CR26837 |
|
Dear Mikhail, Please review CR27029 branch. It contains two commits because fix for issue 0026837 is still not certified. |
|
Please make the same checks as in TrimmedCurve constructor. |
|
Branch CR27029 has been updated forcibly by nbv. SHA-1: 9cc72558eaf19979a85ee0017900aeadc0520ee2 |
|
Reviewed. |
|
Dear BugMaster, Branch CR27029 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 9cc72558eaf19979a85ee0017900aeadc0520ee2 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: Not detetced Testing cases: de iges_1 L6 - FAILED (KNOWN PROBLEM) http://occt-tests/CR27029-master-occt-64/Debian70-64/de/iges_1/L6.html http://occt-tests/CR27029-master-occt-64/Windows-64-VC10/de/iges_1/L6.html Testing on Linux: Total MEMORY difference: 89240077 / 89712152 [-0.53%] Total CPU difference: 19162.440000000028 / 19355.270000000062 [-1.00%] Testing on Windows: Total MEMORY difference: 56933688 / 54611039 [+4.25%] Total CPU difference: 17972.31360639911 / 18182.587354298823 [-1.16%] |
|
Branch CR27029 has been deleted by kgv. SHA-1: 9cc72558eaf19979a85ee0017900aeadc0520ee2 |
occt: master 9a7b15dc 2015-12-23 14:43:19 Committer: abv Details Diff |
0027029: Possible regression in test de iges_1 L6 because of fix for issue 26837 In BRepLib::SameRange, allow exceeding curve range for periodic curves. Test cases returned to the state before fix for issue 0026837. |
Affected Issues 0027029 |
|
mod - src/GeomLib/GeomLib.cxx | Diff File | ||
mod - tests/de/iges_1/L6 | Diff File | ||
mod - tests/de/iges_1/P2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-12-22 16:52 | ifv | New Issue | |
2015-12-22 16:52 | ifv | Assigned To | => gka |
2015-12-22 16:53 | ifv | Assigned To | gka => ifv |
2015-12-22 16:53 | ifv | Assigned To | ifv => msv |
2015-12-22 19:37 | msv | Summary | Possible regression in test de iges_1 L6 because of fix for issue 0026837 => Possible regression in test de iges_1 L6 because of fix for issue 26837 |
2015-12-22 19:38 | msv | Relationship added | child of 0026837 |
2015-12-22 19:41 | msv | Assigned To | msv => nbv |
2015-12-22 19:41 | msv | Status | new => assigned |
2015-12-22 19:41 | msv | Product Version | Unscheduled => 7.0.0 |
2015-12-22 19:41 | msv | Target Version | Unscheduled => 7.1.0 |
2015-12-22 20:09 | abv | Target Version | 7.1.0 => 7.0.0 |
2015-12-22 20:13 | msv | Priority | normal => urgent |
2015-12-23 17:43 | git | Note Added: 0049531 | |
2015-12-23 17:46 |
|
Note Added: 0049532 | |
2015-12-23 17:46 |
|
Assigned To | nbv => msv |
2015-12-23 17:46 |
|
Status | assigned => resolved |
2015-12-23 17:46 |
|
Steps to Reproduce Updated | |
2015-12-23 18:01 | msv | Note Added: 0049536 | |
2015-12-23 18:01 | msv | Assigned To | msv => nbv |
2015-12-23 18:01 | msv | Status | resolved => assigned |
2015-12-23 18:07 | git | Note Added: 0049538 | |
2015-12-23 18:09 | msv | Assigned To | nbv => msv |
2015-12-23 18:09 | msv | Status | assigned => resolved |
2015-12-23 18:09 | msv | Note Added: 0049540 | |
2015-12-23 18:09 | msv | Assigned To | msv => bugmaster |
2015-12-23 18:09 | msv | Status | resolved => reviewed |
2015-12-23 18:34 |
|
Assigned To | bugmaster => apv |
2015-12-24 12:52 |
|
Test case number | => de iges_1 L6 |
2015-12-24 12:56 |
|
Note Added: 0049552 | |
2015-12-24 12:56 |
|
Assigned To | apv => bugmaster |
2015-12-24 12:56 |
|
Status | reviewed => tested |
2015-12-24 12:57 |
|
Note Edited: 0049552 | |
2015-12-25 19:04 | abv | Changeset attached | => occt master 9a7b15dc |
2015-12-25 19:04 | abv | Assigned To | bugmaster => abv |
2015-12-25 19:04 | abv | Status | tested => verified |
2015-12-25 19:04 | abv | Resolution | open => fixed |
2016-04-17 14:07 | git | Note Added: 0053070 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |