0027029: Possible regression in test de iges_1 L6 because of fix for issue 26837

In BRepLib::SameRange, allow exceeding curve range for periodic curves.

Test cases returned to the state before fix for issue #26837.